have added all of the media screens

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 		<link rel="stylesheet"	type="text/css" href="assets/css/reset.css">
 		<!--Linking the css style to this html-->
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		
+		<!--Linking to boostrap viewport-->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	</head>
 
