--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,8 @@
 		<link rel="stylesheet"	type="text/css" href="assets/css/reset.css">
 		<!--Linking the css style to this html-->
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<!--Linking the css style to this html-->
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	</head>
 
 <body>
