--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,9 @@
 
 		<!--Linking the css style to this html-->
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+		<!--Linking the css style to this html-->
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	</head>
 
 <body>
